Clarify deletion restrictions for Change Request records
Updated instructions for restricting record deletion in Change Request table.

--- a/9.md
+++ b/9.md
@@ -1,6 +1,9 @@
 9\. **Restrict the ability to delete records in the _Change Request_ table so only users with the "admin" role can do so.**
 
 ### **Navigate to Access Control (ACLs)**
+- click on profile picture
+- Elivate role -> check the security admin admin 
+- then follow the below process.
 
 - In the **Application Navigator**, type **Access Control**.
 - Go to **System Security > Access Control (ACL)**.
